
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int sqliterk_btree_type ;
struct TYPE_3__ {int type; } ;
typedef TYPE_1__ sqliterk_btree ;


 int SQLITERK_MISUSE ;
 int SQLITERK_OK ;
 scalar_t__ sqliterkBtreeIsSystemType (int ) ;

int sqliterkBtreeSetType(sqliterk_btree *btree, sqliterk_btree_type type)
{
    if (!btree) {
        return SQLITERK_MISUSE;
    }
    if (sqliterkBtreeIsSystemType(btree->type)) {

        return SQLITERK_MISUSE;
    }
    btree->type = type;
    return SQLITERK_OK;
}
